--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -144,7 +144,7 @@ body {
   }
   color: $second-color;
   background-color: $black-color;
-  overflow: hidden;
+  // overflow: hidden;
 }
 /* 讓圖片自適應 */
 img {
