--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -63,7 +63,7 @@ a {
   color: $backmain-color;
 }
 /*======== button & tag ========*/
-.btn {
+.btn-long {
   padding: 4px 35px;
   display: block;
   text-align: center;
@@ -98,12 +98,14 @@ a {
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $main-color;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $main-color;
   border-radius: 5px;
+  color: $main-color;
   > a {
     @include font(14px, 700, left, 2);
-    color: $main-color;
+    color: $black-color;
   }
   &:hover {
      background-color: $main-color;
+     color: $black-color;
     > a {
       @include font(14px, 1000, left, 2);
       color: $black-color; 
