--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 // 各頁面的css請在這邊引入，不用再寫到html了
 @import 'page/index';
 @import 'page/c_back';
+@import 'page/c_back_live';
 @import 'page/about';
 @import 'page/live';
 @import 'page/extend'
