--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -1,11 +1,8 @@
-main{
+.index_block{
     border: 1px solid red;
     background-image: url(../img/index/01.jpg);
     max-width: 100%;
     // height: 100%;
     background-repeat: no-repeat;
     background-size: contain;
-}
-section{
-
 }
