fix: 修正登入頁面顯示在畫面的問題，改為點擊登入頭像再顯示登入頁面

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -8,7 +8,7 @@
       <li class="nav-name nav-login"><a href="./index.html" class="logo_icon"><i class="fa-solid fa-user-check"></i></a>
         <p>廠商名稱</p>
       </li>
-      <li><a href="./index.html" class="logo_icon"><i class="fa-solid fa-user"></i></a></li>
+      <li><a href="#" id="login_page_icon" class="logo_icon login_page_icon"><i class="fa-solid fa-user"></i></a></li>
       <li>
         <label for="checkbox" id="ham-icon" class="btn_switch">
           <span></span>
