--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -1,21 +1,15 @@
 .login{
-    // position: fixed;
-    // top: 0;
-    // bottom: 0;
-    // right: 0;
-    // left: 0;
-    // background-color: rgba(0 , 0, 0,);
-    //   display: none;
-}
-
-.login{
-    .company-sign-in-container{
+    // display: none;
+    .company-sign-in-container , .guest-sign-in-container , .company-sign-up-container{
         width: 410px;
         height: 508px;
         border: 1px solid #57FFF5;
         form{
             width: 100%;
             height: 100%;
+            button{
+                margin: auto;
+            }
             .label-before {
                 line-height: 20px;
                 font-size: 12px;
@@ -23,17 +17,16 @@
                 background: #040F15;
                 padding: 0 6px;
                 left: 115px;
-                // margin: 0 auto;
             }
             h2{
                 text-align: center;
+                text-shadow: 0px 3px 3px rgba(0, 238, 255, 0.7);
                 margin-top: 100px;
             }
             .field {
                 position: relative;
-                // margin-bottom: 15px;
-                margin: 0 auto;
-                // border: 1px solid red;
+                margin: 0 auto 20px;
+                height: 36px;
                 label::before {
                     content: attr(title);
                     position: absolute;
@@ -41,51 +34,21 @@
                     left: 120px;
                     line-height: 36px;
                     font-size: 14px;
-                    color: #F6FAFB;
+                    color: $second-color;
                     transition: 300ms all;
                 }
                 input {
-                    display: block;
-                    width: 200px;
-                    height: 36px;
-                    line-height: 36px;
-                    margin: 0 auto;
-                    padding: 0 15px;
-                    box-sizing: border-box;
-                    font-size: 14px;
-                    color: #57FFF5;
-                    // border: 1px solid #ccc;
-                    border: 1px solid #F6FAFB;
-                    border-radius: 5px;
-                    background-color: transparent;
-                    &:focus {
-                        outline: 0;
-                        border-color: #57FFF5;
-                    }
-    
-                    &:valid+label::before {
-                        @extend .label-before;
-                        content: attr(data-title);
-                    }
-    
-                    &:focus+label::before {
-                        @extend .label-before;
-                        color: #57FFF5;
-                    }
+                    @include input();
                 }
             }
-            
-            .group{
+            .group{ 
                 // border: 1px solid red;
                 display: flex;
                 justify-content: center;
                 
                 button{
                     margin: 0 10px;
-                    // margin-bottom: 20px;
-                    // margin: auto;
                 }
-                
             }
             a {
                 // border: 1px solid red;
@@ -99,12 +62,63 @@
                 font-size: 14px;
                 }
                 margin-top: 20px;
-                color: $second-color;
-                &:hover{
-                    color: $main-color;
+                color: $accent-color;
+            }
+        }
+    }    
+    .guest-sign-in-container , .company-sign-up-container{
+        background-color: $second-color;
+        form{
+            h2.guestsignin, h2.companysignup{
+                color: $black-color;
+                text-shadow: 0px 2px 2px rgba(0, 238, 255, 0.6);
+            }
+            h2.companysignup{
+                margin-top: 40px;
+                margin-bottom: 20px;
+            }
+            .field{
+                input{
+                    border: 1px solid $black-color;
+                    color: $black-color;
+                    font-size: 16px;
+                    &::selection{
+                        background-color: $second-color;
+                        color: $main-color;
+                    }
                 }
+                input.signup{
+                    margin-bottom: 0px;
+                    margin-top: 0px;
+                }
+                label::before {
+                    color: $black-color;
+                }
+            }
+            .label-before {
+                background: $second-color;
+            }
+            select#exb_dropdown{
+                display: block;
+                width: 200px;
+                height: 36px;
+                line-height: 36px;
+                margin: 0 auto 30px;
+                padding: 0 15px;
+                font-size: 14px;
+                box-sizing: border-box;
+                border-radius: 5px;
+                font-weight: 700;
+                border: 1px solid $black-color;
             }
         }
     }
-} 
+}
+.-login_page_icon {
+    display: block;
+}
+
+
+
+
 
