feat:新增menu的登出按鈕及顏色，修改font的mixin預設字距原為1px改為2px，新增footer的html

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,3 +1,21 @@
-<div class="footer over-hidden">
-    <div class="wrapper"></div>
+<section>
+  <div class="footer over-hidden mt-60">
+    <div class="wrapper">
+      <div class="footer-main mt-40">
+        <h5>Tián lám 2022智慧全球科技聚策展</h5>
+        <ul class="footer-icon mt-20">
+          <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+        <ul class="footer-menu mt-20 mb-36">
+          <li><a><h5>虛擬商展</h5></a></li>
+          <li><a><h5>現正直播</h5></a></li>
+          <li><a><h5>展會介紹</h5></a></li>
+          <li><a><h5>新聞資訊</h5></a></li>
+          <li><a><h5>聯絡我們</h5></a></li>
+        </ul>
+      </div>
+    </div>
   </div>
+</section>
