--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -148,6 +148,9 @@
       line-height: 60px;
       color: $second-color;
     }
+    .accent-color{
+      color: $accent-color;
+    }
   }
   // 廠商後台頁面
   .nav-company {
