--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,4 +1,4 @@
-<!-- <section> -->
+<section>
 <nav>
   <div class="nav">
     <a href="./index.html" class="logo"><img src="img/tianlam-logo-blue.svg" alt="logo" class="img"></img></a>
@@ -8,7 +8,7 @@
       <li class="nav-name nav-login"><a href="./index.html" class="logo_icon"><i class="fa-solid fa-user-check"></i></a>
         <p>廠商名稱</p>
       </li>
-      <li><a href="#" id="login_page_icon" class="logo_icon login_page_icon"><i class="fa-solid fa-user"></i></a></li>
+      <li><a href="#" id="login_page_icon" class="logo_icon"><i class="fa-solid fa-user"></i></a></li>
       <li>
         <label for="checkbox" id="ham-icon" class="btn_switch">
           <span></span>
@@ -20,14 +20,14 @@
     </ul>
   </div>
   <ul class="menu">
-    <li class="nav-company"><a href="companyback.html"></a>管理後台</a></li>
+    <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a></li>
     <li><a href="extend.html">虛擬商展</a></li>
     <li><a href="live.html">現正直播</a></li>
     <li><a href="about.html">展會介紹</a></li>
     <li><a href="news.html">新聞資訊</a></li>
     <li><a href="contect.html">聯絡我們</a></li>
-    <li><a href="login.html">登出</a></li>
+    <li class="nav-company"><a href="login.html" class="accent-color">登出<img src="img/logout.svg" alt="logout" class="ml-6"></img></a></li>
   </ul>
   <div id="menu-backdrop"></div>
 </nav>
-<!-- </section> -->
+</section>
