feat:新增index.html/index.scss

--- a/src/layout/login.html
+++ b/src/layout/login.html
@@ -1,4 +1,4 @@
-<div class="login" id="login">
+<!-- <div class="login" id="login">
     <section class="form-container company-sign-in-container">
         <form action="#" method="#" id="right_form">
             <h2 class="mb-30">廠商登入</h2>
@@ -62,4 +62,4 @@
             </div>
         </div>
     </article>
-</div>
+</div> -->
