--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -1,8 +1,42 @@
-.index_block{
-    border: 1px solid red;
+// main
+.index_block {
+    height: 100vh;
+    // border: 1px solid red;
     background-image: url(../img/index/01.jpg);
     max-width: 100%;
-    // height: 100%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% auto;
+    position: relative;
+}
+
+
+// h1
+.index_title {
+    border: 1px solid green;
+    color: $second-color;
+    position: absolute;
+    left: 50%;
+    top: 5%;
+    transform: translateX(-50%);
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 2px rgba($main-color, .7);
+}
+
+// div carousel
+.index_carousel{
+    // margin-top: 200px;
+    border: 1px solid red;
+    .index_carousel_single {
+        border: 1px solid purple;
+        background-image: url(../img/index/02.svg);
+        background-repeat: no-repeat;
+        background-size: 25% auto;
+        background-position: center center;
+        padding: 30px;
+        h1,h2{
+            text-align: center;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 2px rgba($second-color, .7);
+        }
+    }
 }
