feat 新增頁面(未完成)js(未完成) 增加var.scss

--- a/src/sass/base/_var.scss
+++ b/src/sass/base/_var.scss
@@ -13,3 +13,7 @@
     $xl_bkpoint: 1200px; /* 筆電 */
     $md_bkpoint: 768px; /* 平板 */
     $xs_bkpoint: 375px; /* 手機 */
+
+
+    // =========companyback 13號設定的================//
+    $companyback_text_shadow:0px 4px 4px $accent-color;
