--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -119,6 +119,7 @@ a {
   text-align: center;
   // background-color: $main-color;
   background: #0a0e27;
+  cursor: pointer;
   border: 1px solid $accent-color;
   box-sizing: border-box;
   // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -128,6 +129,7 @@ a {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   border-radius: 20px;
   color:  $second-color;
+  
     // @include font(14px, 700, left, 2);
   &:hover {
      background-color: $accent-color;
