--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,20 +1,51 @@
 <section>
   <div class="footer over-hidden mt-60">
     <div class="wrapper">
-      <div class="footer-main mt-40">
+      <div class="footer-main">
         <h5>Tián lám 2022智慧全球科技聚策展</h5>
         <ul class="footer-icon mt-20">
-          <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
-          <li><a href=""><i class="fa-solid fa-envelope"></i></a></li>
-          <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+          <li><a href="mailto:Tián_lám@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+          <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </ul>
         <ul class="footer-menu mt-20 mb-36">
-          <li><a><h5>虛擬商展</h5></a></li>
-          <li><a><h5>現正直播</h5></a></li>
-          <li><a><h5>展會介紹</h5></a></li>
-          <li><a><h5>新聞資訊</h5></a></li>
-          <li><a><h5>聯絡我們</h5></a></li>
+          <li><a href="extend.html">
+              <h5>虛擬商展</h5>
+            </a></li>
+          <li><a href="live.html">
+              <h5>現正直播</h5>
+            </a></li>
+          <li><a href="about.html">
+              <h5>展會介紹</h5>
+            </a></li>
+          <li><a href="news.html">
+              <h5>新聞資訊</h5>
+            </a></li>
+          <li><a href="contect.html">
+              <h5>聯絡我們</h5>
+            </a></li>
         </ul>
+        <div class="footer-content">
+          <ul>
+            <li>
+              <h5>聯絡資訊</h5>
+            </li>
+            <li>
+              <h5>Tián_lám@gmail.com</h5>
+            </li>
+            <li>
+              <h5>02-2712-0589</h5>
+            </li>
+            <li>
+              <h5>104506台北市中山區南京東路三段219號5樓</h5>
+            </li>
+          </ul>
+          <div class="footer-img"><a href="./index.html"><img src="img/tianlam-logo-blue.svg" alt="logo"></a></div>
+        </div>
+      </div>
+      <div class="copyright mt-30 mb-30 ">
+        <h5>本網站為緯育TibaMe前端設計工程師班第74期第5組學員專題成果作品，本平台僅供學習
+          展示之用。參考資源：EVENTX</h5>
       </div>
     </div>
   </div>
