--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -11,6 +11,7 @@ h1{
     position: absolute;
     right: 10vw;
     bottom: 100px;
+    color: white;
 }
 
 // @media  (max-width:1120px) {
@@ -47,7 +48,8 @@ h1{
 .about_speaker{
     width: 290px;
     height: 481px;
-    border:2px solid #57FFF5 ;
+    background-color: #333333;
+    // border:2px solid #57FFF5 ;
     display: block;
 }
 
@@ -77,6 +79,12 @@ h1{
 
 .about_speaker:hover .about_hoverText li{
     text-align: left;
+    font-size: 14px;
+}
+
+.about_speaker:hover .about_hoverText h4{
+    text-align: left;
+    padding: 20px;
 }
 
 // 分三塊
@@ -93,3 +101,36 @@ h1{
 
 //輪播
 
+
+.mySwiper {
+    margin-bottom: 100px;
+}
+
+
+// .swiper-scrollbar {
+//     height:10px;
+//     width: 94%;
+//     left: 3%;
+//     bottom: 10px;
+//     position: absolute;
+//     background: red;
+//     box-shadow: 1px 1px 1px white ;
+//   }
+//   .swiper-scrollbar-drag {
+//     background: yellow;
+//     box-shadow: 0px 1px 1px rgb(240, 240, 240);
+//   }
+
+.swiper-slide{
+    margin-bottom: 20px;
+}
+ .swiper-horizontal>.swiper-scrollbar{
+    background: $black-color;
+    // background-color: aliceblue;
+    height: 1px !important;;
+
+}
+.swiper-horizontal>.swiper-scrollbar>.swiper-scrollbar-drag{
+    background: #57FFF5;
+    width: 120px !important;
+}
