--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -1,32 +1,52 @@
-.login{
-    // display: none;
-    .company-sign-in-container , .guest-sign-in-container , .company-sign-up-container{
-        width: 410px;
+form.login {
+    // position: fixed;
+    // top: 0;
+    // z-index: 3;
+    display: none;
+    // background-color: rgba(0, 0, 0, .6);
+    // width: 100%;
+    // height: 100%;
+    div.member {
+        // display: flex;
+        width: 820px;
         height: 508px;
-        border: 1px solid #57FFF5;
-        form{
-            width: 100%;
-            height: 100%;
-            button{
-                margin: auto;
-            }
+        // position: relative;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%,-50%);
+        // overflow: hidden;
+        button.btn-close {
+            display: block;
+            color: red;
+        }
+        .company-sign-in-container,
+        .guest-sign-in-container,
+        .company-sign-up-container {
+            width: 410px;
+            height: 508px;
+            border: 1px solid #57fff5;
             .label-before {
                 line-height: 20px;
                 font-size: 12px;
                 top: -10px;
-                background: #040F15;
+                background: #040f15;
                 padding: 0 6px;
                 left: 115px;
             }
-            h2{
+            h2 {
                 text-align: center;
+                // color:  $black-color;
                 text-shadow: 0px 3px 3px rgba(0, 238, 255, 0.7);
                 margin-top: 100px;
+            }
+            .h2-black {
+                color: $black-color;
             }
             .field {
                 position: relative;
                 margin: 0 auto 20px;
                 height: 36px;
+                // border: 1px solid red;
                 label::before {
                     content: attr(title);
                     position: absolute;
@@ -41,16 +61,33 @@
                     @include input();
                 }
             }
-            .group{ 
+            .login-group {
+                @include flex-box-center(200px);
+                margin: 0 auto;
                 // border: 1px solid red;
                 display: flex;
                 justify-content: center;
-                
                 button{
-                    margin: 0 10px;
+                    // font-size: 20px;
+                    // line-height: 36px;
+                    // padding:4px 14px;
+                    display: block;
+                    cursor: pointer;
+                    margin-top: 35px;
+                    // color: $main-color;
+                    &:hover{
+                        background-color: $main-color;
+                        color: $black-color;
+
+                    }
+                }
+                .btn-1 {
+                    display: block;
+                    // margin: 0 10px;
                 }
             }
-            a {
+
+            .forget-a {
                 // border: 1px solid red;
                 display: block;
                 width: 100px;
@@ -59,35 +96,58 @@
                 margin: 0 auto;
                 @include font(16px, 300, center, 1.6);
                 @include mobile() {
-                font-size: 14px;
+                    font-size: 14px;
                 }
                 margin-top: 20px;
                 color: $accent-color;
             }
+            button {
+                &:hover {
+                    color: $black-color;
+                    background-color: $main-color;
+                }
+            }
         }
-    }    
-    .guest-sign-in-container , .company-sign-up-container{
-        background-color: $second-color;
-        form{
-            h2.guestsignin, h2.companysignup{
+        .company-sign-in-container {
+            order: 1;
+            // @include relative(0, 0, 0, 0, 2);
+            // position: relative;
+        }
+        .company-sign-up-container {
+            // @include absolute(0, 0, 0, 0, 2);
+            // position: absolute;
+            // top: -10;
+            // right: 0;
+            // bottom: 0;
+            // left: 0;
+            // margin: auto;
+        }
+        .guest-sign-in-container,
+        .company-sign-up-container {
+            background-color: $second-color;
+
+            h2.companysignup {
                 color: $black-color;
                 text-shadow: 0px 2px 2px rgba(0, 238, 255, 0.6);
             }
-            h2.companysignup{
+            h2.companysignup {
                 margin-top: 40px;
                 margin-bottom: 20px;
             }
-            .field{
-                input{
+            .btn-2 {
+                margin: 0 auto;
+            }
+            .field {
+                input {
                     border: 1px solid $black-color;
                     color: $black-color;
                     font-size: 16px;
-                    &::selection{
+                    &::selection {
                         background-color: $second-color;
                         color: $main-color;
                     }
                 }
-                input.signup{
+                input.signup {
                     margin-bottom: 0px;
                     margin-top: 0px;
                 }
@@ -98,7 +158,7 @@
             .label-before {
                 background: $second-color;
             }
-            select#exb_dropdown{
+            select#exb_dropdown {
                 display: block;
                 width: 200px;
                 height: 36px;
@@ -112,13 +172,72 @@
                 border: 1px solid $black-color;
             }
         }
+        .received-form {
+            width: 410px;
+            height: 508px;
+            border: 1px solid $main-color;
+            background-color: $second-color;
+            p.rcvd {
+                text-align: center;
+                margin-top: 90px;
+                margin-bottom: 30px;
+                letter-spacing: 2px;
+                color: $black-color;
+                @include font(28px, 700, center, 2);
+            }
+            p {
+                // border: 1px solid red;
+                width: 310px;
+                margin: 0 auto;
+                text-align: center;
+                letter-spacing: 2px;
+                color: $black-color;
+                margin-bottom: 30px;
+            }
+            button.btn-2 {
+                margin: 0 auto;
+            }
+        }
+        .form-forget-password {
+            width: 410px;
+            height: 508px;
+            border: 1px solid $main-color;
+
+            ul {
+                @include flex-box-between(230px);
+                margin: 30px auto 0;
+                li {
+                    input#changeemail {
+                        width: 200px;
+                    }
+                }
+            }
+            button.give {
+                margin: 0 auto;
+                margin-top: 30px;
+            }
+        }
+        article.overlay-container {
+            width: 410px;
+            height: 508px;
+            border: 1px solid $main-color;
+            background-image: url(../img/login/Maskgroup.png);
+            .welcome {
+                text-align: center;
+                margin-top: 90px;
+            }
+            p.welslogan {
+                text-align: center;
+                margin-top: 10px;
+                margin-bottom: 20px;
+            }
+            button.ghost {
+                margin: 0 auto;
+            }
+        }
     }
 }
+
 .-login_page_icon {
     display: block;
 }
-
-
-
-
-
