fix: 修正虛擬商展logo尺寸輪播問題;feat:新增假logo

--- a/src/sass/page/_extend.scss
+++ b/src/sass/page/_extend.scss
@@ -2,6 +2,13 @@
 .extend_head{
     width: 90%;
     position: relative;
+    .item{
+        height: 60px;
+        img{
+            max-height: 100%;
+            width: auto;
+        }
+    }
     .owl-nav{
         height: 0;
         span{
