--- a/src/sass/mixin/_other.scss
+++ b/src/sass/mixin/_other.scss
@@ -15,7 +15,7 @@ input {
     // border-bottom: 1px solid $accent-color;
     border-radius: 5px;
     background-color: transparent;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     &:focus {
         outline: 0;
         border-color: $main-color;
