feat 更新companyback_live.js 增加_other.scss 更新_c_back_live.scss外加html(live)共四分

--- a/src/sass/mixin/_other.scss
+++ b/src/sass/mixin/_other.scss
@@ -36,7 +36,7 @@ input {
         color: $main-color;
     }
 }
-
+//@include input()
 @mixin input($width: 200px, $mc: #57FFF5, $sc: #F6FAFB, $bc:#040F15){
     display: block;
     width: $width;
