--- a/src/sass/page/_c_back_live.scss
+++ b/src/sass/page/_c_back_live.scss
@@ -84,38 +84,42 @@ $companyback_num2 : 2 ;
             transition: 300ms all;
         }
         input {
-            display: block;
-            width: 695px;
+            @include input(695px,$accent-color);
             height: 56px;
             line-height: 56px;
-            margin: 0 auto;
-            padding: 0 20px;
-            box-sizing: border-box;
-            font-size: 16px;
-            color: $second-color;
-            // border: 1px solid #ccc;
-            border: 1px solid #F6FAFB;
-            border-radius: 5px;
-            background-color: transparent;
-            &:focus {
-                outline: 0;
-                border-color: $accent-color;
-            }
+            font-size: 18px;
+            // display: block;
+            // width: 695px;
+            // height: 56px;
+            // line-height: 56px;
+            // margin: 0 auto;
+            // padding: 0 20px;
+            // box-sizing: border-box;
+            // font-size: 16px;
+            // color: $second-color;
+            // // border: 1px solid #ccc;
+            // border: 1px solid #F6FAFB;
+            // border-radius: 5px;
+            // background-color: transparent;
+            // &:focus {
+            //     outline: 0;
+            //     border-color: $accent-color;
+            // }
 
-            &:valid+label::before {
-                @extend .label-before;
-                content: attr(data-title);
-            }
+            // &:valid+label::before {
+            //     @extend .label-before;
+            //     content: attr(data-title);
+            // }
 
-            &:focus+label::before {
-                @extend .label-before;
-                color: $accent-color;
-                // color: rgba(0,0,0,0);
-            }
-            &::selection{
-                background-color: $black-color;
-                color: $accent-color;
-            }
+            // &:focus+label::before {
+            //     @extend .label-before;
+            //     color: $accent-color;
+            //     // color: rgba(0,0,0,0);
+            // }
+            // &::selection{
+            //     background-color: $black-color;
+            //     color: $accent-color;
+            // }
         }
         // input:not(:focus) + label{
         //     color: rgba(0,0,0,0);
@@ -124,7 +128,7 @@ $companyback_num2 : 2 ;
     .companyback_save{
         width: 177px;
         margin: 0 auto;
-        margin-top: 45px;
+        margin-top: 22px;
     }
 }
 
@@ -138,7 +142,15 @@ $companyback_num2 : 2 ;
     float: right;
    }
 }
-aside.oreange{
-    color: rgba(243, 127, 21, 0.14);
 
+
+
+
+
+//layout顏色
+aside.companyback_layout.blue{
+    color: rgba(87, 255, 245, 0.14);
+}               
+aside.companyback_layout.orange{
+    color:rgba(243, 127, 21, 0.14);
 }
