feat 將所有h1標籤改掉 新增contect頁面

--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -1,9 +1,7 @@
-//標題顏色
-.about_brief>h1, .about_agenda h1,.about_lecturer>h1,
-.about_exhibitor >h1{
+.about_title{
+    font-size:36px;
     color: #57FFF5;
 }
-
 .about_banner{
     position: relative;
 }
